fixing layout issues

--- a/Assets/portfolio.css
+++ b/Assets/portfolio.css
@@ -81,7 +81,7 @@ img {
   grid-area: 6 / 1 / 13 / 7;
 }
 .eBox {
-  grid-area: 7 / 6 / 9 / 10;
+  grid-area: 7 / 7 / 9 / 10;
 }
 .fBox {
   grid-area: 9 / 7 / 10 / 10;
@@ -99,10 +99,10 @@ img {
   grid-area: 16 / 1 / 24 / 7;
 }
 .kBox {
-  grid-area: 17 / 6 / 19 / 10;
+  grid-area: 17 / 8 / 19 / 11;
 }
 .lBox {
-  grid-area: 19 / 7 / 20 / 9;
+  grid-area: 19 / 8 / 20 / 11;
 }
 .mBox {
   grid-area: 21 / 3 / 27 / 13;
@@ -150,7 +150,7 @@ img {
 h2 {
   color: rgb(250, 241, 234);
   font-family: Georgia, "Times New Roman", Times, serif;
-  font-weight: 500;
+  font-weight: 600;
   padding: 15px;
 }
 
@@ -163,21 +163,6 @@ h2 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: whitesmoke;
 }
-
-/* .goGo {
-  float: none;
-  display: inline-block;
-  zoom: 1;
-  /* width: 0px; */
-/* margin: auto; */
-/* text-align: center; */
-/* padding: 10px;
-} */
-/* a {
-  color: rgb(99, 117, 216);
-  font-weight: 525;
-  font-family: Georgia, "Times New Roman", Times, serif;
-} */
 
 #picture-linked,
 #picture-git,
